--- a/KrontecDemo/KrontecDemo.csproj
+++ b/KrontecDemo/KrontecDemo.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <ProjectReference Include="..\Krontec.Data\Krontec.Data.csproj" />
   </ItemGroup>
 
 </Project>
